--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.0",
     "firebase": "^11.2.0",
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "tailwindcss": "^4.0.0"
