--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.21.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
